--- a/workspace/timetable/pom.xml
+++ b/workspace/timetable/pom.xml
@@ -11,11 +11,12 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.5.2.RELEASE</version>
+		<version>1.5.3.RELEASE</version>
 	</parent>
 
 	<properties>
 		<java.version>1.8</java.version>
+		<!-- <junit.version>4.11</junit.version> -->
 		<!-- <spring-data-releasetrain.version>Hopper-SR7</spring-data-releasetrain.version> -->
 	</properties>
 
@@ -41,6 +42,24 @@
 				<artifactId>cglib</artifactId>
 				<version>3.2.5</version>
 				<scope>runtime</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.dbunit</groupId>
+				<artifactId>dbunit</artifactId>
+				<version>2.5.3</version>
+				<scope>test</scope>
+				<exclusions>
+					<exclusion>
+						<artifactId>junit</artifactId>
+						<groupId>junit</groupId>
+					</exclusion>
+				</exclusions>
+			</dependency>
+			<dependency>
+				<groupId>com.github.springtestdbunit</groupId>
+				<artifactId>spring-test-dbunit</artifactId>
+				<version>1.3.0</version>
+				<scope>test</scope>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
