--- a/workspace/timetable/timetable-business/pom.xml
+++ b/workspace/timetable/timetable-business/pom.xml
@@ -26,6 +26,10 @@
 			<artifactId>validation-api</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>joda-time</groupId>
+			<artifactId>joda-time</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-validator</artifactId>
 			<scope>runtime</scope>
