--- a/workspace/timetable/pom.xml
+++ b/workspace/timetable/pom.xml
@@ -16,8 +16,6 @@
 
 	<properties>
 		<java.version>1.8</java.version>
-		<!-- <junit.version>4.11</junit.version> -->
-		<!-- <spring-data-releasetrain.version>Hopper-SR7</spring-data-releasetrain.version> -->
 	</properties>
 
 	<modules>
@@ -42,6 +40,16 @@
 				<artifactId>cglib</artifactId>
 				<version>3.2.5</version>
 				<scope>runtime</scope>
+			</dependency>
+			<dependency>
+				<groupId>io.springfox</groupId>
+				<artifactId>springfox-swagger-ui</artifactId>
+				<version>2.6.1</version>
+			</dependency>
+			<dependency>
+				<groupId>io.springfox</groupId>
+				<artifactId>springfox-swagger2</artifactId>
+				<version>2.6.1</version>
 			</dependency>
 			<dependency>
 				<groupId>org.dbunit</groupId>
