--- a/workspace/timetable/timetable-web-app/pom.xml
+++ b/workspace/timetable/timetable-web-app/pom.xml
@@ -6,7 +6,7 @@
 		<artifactId>timetable</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
-	<artifactId>timetable-web-app</artifactId>
+	<artifactId>timetable-web-services</artifactId>
 	<dependencies>
 		<dependency>
 			<groupId>com.bougouri.timetable</groupId>
