--- a/workspace/timetable/pom.xml
+++ b/workspace/timetable/pom.xml
@@ -52,6 +52,11 @@
 				<version>2.6.1</version>
 			</dependency>
 			<dependency>
+				<groupId>com.esotericsoftware.yamlbeans</groupId>
+				<artifactId>yamlbeans</artifactId>
+				<version>1.08</version>
+			</dependency>
+			<dependency>
 				<groupId>org.dbunit</groupId>
 				<artifactId>dbunit</artifactId>
 				<version>2.5.3</version>
