--- a/workspace/timetable/timetable-business/pom.xml
+++ b/workspace/timetable/timetable-business/pom.xml
@@ -30,6 +30,10 @@
 			<artifactId>joda-time</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>com.esotericsoftware.yamlbeans</groupId>
+			<artifactId>yamlbeans</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-validator</artifactId>
 			<scope>runtime</scope>
@@ -80,14 +84,6 @@
 			<artifactId>assertj-core</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<!-- <dependency> <groupId>junit</groupId> <artifactId>junit</artifactId> 
-			<scope>test</scope> </dependency> <dependency> <groupId>org.assertj</groupId> 
-			<artifactId>assertj-core</artifactId> <scope>test</scope> </dependency> <dependency> 
-			<groupId>org.springframework</groupId> <artifactId>spring-test</artifactId> 
-			<scope>test</scope> </dependency> <dependency> <groupId>org.dbunit</groupId> 
-			<artifactId>dbunit</artifactId> <scope>test</scope> </dependency> <dependency> 
-			<groupId>com.github.springtestdbunit</groupId> <artifactId>spring-test-dbunit</artifactId> 
-			<scope>test</scope> </dependency> -->
 	</dependencies>
 
 	<build>
