--- a/workspace/timetable/timetable-web-frontend/src/main/frontend/package.json
+++ b/workspace/timetable/timetable-web-frontend/src/main/frontend/package.json
@@ -20,7 +20,11 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "lodash": "^4.17.4",
+    "ngx-bootstrap": "^1.6.6",
+    "ngx-restangular": "^1.0.11",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
@@ -35,9 +39,11 @@
     "karma": "~1.4.1",
     "karma-chrome-launcher": "~2.1.1",
     "karma-cli": "~1.0.1",
+    "karma-coverage-istanbul-reporter": "^0.2.0",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "karma-coverage-istanbul-reporter": "^0.2.0",
+    "lodash": "^4.17.4",
+    "ngx-restangular": "^1.0.11",
     "protractor": "~5.1.0",
     "ts-node": "~2.0.0",
     "tslint": "~4.5.0",
