--- a/workspace/timetable/timetable-web-frontend/src/main/frontend/package.json
+++ b/workspace/timetable/timetable-web-frontend/src/main/frontend/package.json
@@ -28,6 +28,7 @@
     "ngx-datetime-picker": "^1.0.7",
     "ngx-modal": "0.0.29",
     "ngx-restangular": "^1.0.11",
+    "ngx-tabs": "0.0.13",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
