Beginning the use of DBUnit. Not working now!

--- a/workspace/timetable/timetable-business/src/main/resources/config.yml
+++ b/workspace/timetable/timetable-business/src/main/resources/config.yml
@@ -3,6 +3,6 @@ dataSource:
    dialect: org.hibernate.dialect.PostgreSQLDialect
    url: jdbc:postgresql://localhost:5432/bougouri
    user: postgres
-   password: YWRtaW4=
+   password: amFja2k=
    schemaStartegy: create-drop
    showSql: true
